@@ -177,6 +177,7 @@ New features:
 --------------------------------------------------------------------------------
 Changes for 1.8.6rc1
 
+ - [ZBX-3911] fixed wrong trigger expression parsing when key parameters contained "(" (KB)
  - [ZBX-3856] fixed application unlink and clear when it is linked from template (Eduard)
  - [ZBX-3840] fixed possible path disclosure (Vedmak)
  - [ZBXNEXT-849] added example MySQL UserParameter to monitor database and table size (Richlv)
